<resources>
    <string name="app_name">iBike Dealer</string>
    <string name="sendotp_key">your_sendotp_key</string>
    <string name="enterphonenumber">Enter your phone number</string>
    <string name="selectcountry">Select country</string>
    <string name="sending_sms">We\'re sending an sms to</string>
    <string name="inprogress">Verification in\nprogress</string>
    <string name="verified">Verification successful</string>
    <string name="failed">Verification failed</string>
    <string name="entercode">Please enter the code you received</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">username</string>
    <string name="nav_header_subtitle">Fitter</string>
    <string name="weight_mock" translatable="false">50 oz</string>
    <string name="weight_badge" translatable="false">WEIGHT</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="requests_count_badge" translatable="false">REQUESTS</string>
    <string name="action_settings">Settings</string>
    <string name="pledge_badge" translatable="false">PLEDGE</string>
    <string name="menu_home">My Account</string>
    <string name="menu_gallery">My Stock List</string>
    <string name="menu_slideshow">Waiting-(W-List)</string>
    <string name="menu_return">Purchase Product</string>
    <string name="menu_order">My orders</string>
    <string name="menu_update">Update App</string>
    <string name="menu_tools">Logout</string>
    <string name="menu_payment">Payments</string>
    <string name="menu_sales">New Sale</string>
    <string name="menu_tools1">check</string>
    <string name="menu_share">Share</string>
    <string name="menu_otp">Recent Otp</string>
    <string name="search">Search</string>

    <string-array name="text_info">
        <item>Tutorial 1</item>
        <item>Tutorial 2</item>
        <item>Tutorial 3</item>
        <item>Tutorial 4</item>
        <item>Tutorial 5</item>
        <item>Tutorial 6</item>
        <item>Tutorial 7</item>
    </string-array>

    <string-array name="text_desc">
        <item>Tutorial 1</item>
        <item>Tutorial 2</item>
        <item>Tutorial 3</item>
        <item>Tutorial 4</item>
        <item>Tutorial 5</item>
        <item>Tutorial 6</item>
        <item>Tutorial 7</item>
    </string-array>
</resources>
