<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
           android:icon="@drawable/acc_profile"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_stocklist"
            android:icon="@drawable/stocklist"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/arrowleft"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_Return"
            android:icon="@drawable/ic_sync_black_24dp"
            android:title="@string/menu_return" />

<!--        <item-->
<!--            android:id="@+id/nav_purchase"-->
<!--            android:icon="@drawable/ic_add_shopping_cart_black_24dp"-->
<!--            android:title="@string/menu_return" />-->
<!--        <item-->
<!--            android:id="@+id/nav_myorders"-->
<!--            android:icon="@drawable/cart1"-->
<!--            android:title="@string/menu_order" />-->
        <item
            android:id="@+id/nav_otp"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/menu_otp" />

<!--        <item-->
<!--            android:id="@+id/nav_payments"-->
<!--            android:icon="@drawable/payment"-->
<!--            android:title="@string/menu_payment"/>-->
        <item
            android:id="@+id/nav_salse"
            android:icon="@drawable/ic_payment_black_24dp"
            android:title="@string/menu_sales"/>
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/menu_tools" />
        <!--<item-->
            <!--android:id="@+id/pending"-->
            <!--android:icon="@drawable/ic_power_settings_new_black_24dp"-->
            <!--android:title="@string/menu_tools1" />-->
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="@string/menu_share" />-->

        <!--</menu>-->
    <!--</item>-->

</menu>
